test/kubernetes/e2e/features/client_tls/testdata/vs-targeting-kube.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-targeting-kube
spec:
  virtualHost:
    domains:
      - nginx.example.com
    routes:
      - matchers:
          - exact: /nginx
        routeAction:
          single:
            kube:
              port: 8443
              ref:
                name: nginx-annotated
                namespace: nginx
        options:
          # The NGINX pod is configured to serve the root path, so we need to rewrite the path to the root path.
          prefixRewrite: /

      - matchers:
          - exact: /nginx-oneway
        routeAction:
          single:
            kube:
              port: 8443
              ref:
                name: nginx-annotated-oneway
                namespace: nginx
        options:
          # The NGINX pod is configured to serve the root path, so we need to rewrite the path to the root path.
          prefixRewrite: /
