test/kubernetes/e2e/features/client_tls/testdata/vs-targeting-upstream.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs-targeting-upstream
spec:
  virtualHost:
    domains:
      - nginx.example.com
    routes:
      - matchers:
          - exact: /nginx
        routeAction:
          single:
            upstream:
              name: nginx
              namespace: nginx
        options:
          # The NGINX pod is configured to serve the root path, so we need to rewrite the path to the root path.
          prefixRewrite: /

      - matchers:
          - exact: /nginx-oneway
        routeAction:
          single:
            upstream:
              name: nginx-oneway
              namespace: nginx
        options:
          # The NGINX pod is configured to serve the root path, so we need to rewrite the path to the root path.
          prefixRewrite: "/"

      - matchers:
          - exact: /nginx-oneway-bad-san
        routeAction:
          single:
            upstream:
              name: nginx-oneway-bad-san
              namespace: nginx
        options:
          # The NGINX pod is configured to serve the root path, so we need to rewrite the path to the root path.
          prefixRewrite: "/"
